# devloop-spec-agent

./: .gitignore  ARCHITECTURE.md  DEFENSES.md  EVIDENCE.md  Makefile  README.md  REVIEWER_GUIDE.md  SHOWCASE_README.md  pyproject.toml  spec生成流程图解-面试通俗版.md  面试讲解指南.md
.github/workflows/: test.yml
configs/: default.yaml  models.yaml
devloop/: __init__.py  cache.py
devloop/cli/: __init__.py  main.py
devloop/config/: __init__.py  settings.py
devloop/eval/: runner.py
devloop/llm/: __init__.py  gateway.py  json_helpers.py  retry.py  routing.py  trace.py  trace_analyzer.py  types.py
devloop/spec_phase/: __init__.py  _homoglyph_table.py  md_json_bridge.py  orchestrator.py  preflight.py  prompts_loader.py  regression_guard.py
devloop/tools/: __init__.py  _paths.py  base.py  code_search.py  cost_summary.py  file_read.py  git_tools.py  navigation.py  output_tools.py  project_understanding.py  references.py  registry.py
docs/: CONFIGURATION.md  QUICKSTART.md  architecture.md
eval/golden_set/: 01-product-comments.json  02-pagination.json  03-fix-get-product.json
prompts/: writer.md  writer_rewrite.md  writer_rewrite_segment_frs.md  writer_rewrite_segment_head.md  writer_rewrite_segment_scs.md  writer_rewrite_segment_stories.md  writer_rewrite_segment_tail.md
prompts/approach/: plan_evaluator.md  plan_generator.md  plan_selector.md
prompts/explorer/: _base.md  api.md  consolidator.md  data.md  history.md  performance.md  security.md  targeted.md  test.md  ui.md
prompts/intent/: analyzer.md  skeptic.md  verifier.md
prompts/reviewer/: _base.md  adversarial.md  architecture.md  completeness.md  consistency.md  executability.md  meta.md
scripts/: generate_homoglyph_table.py  演示流程.ps1
specs/: CAPABILITY_BOUNDARY_REPORT.md  CROSS_CASE_FINAL_REPORT.md  CROSS_CASE_NEW_PIPELINE_REPORT.md  GAP-B2-C2-COMBINED.md  GAP_CLOSURE_REPORT.md  ITERATIVE_IMPROVEMENT_REPORT.md  STRICT_AUDIT_REPORT.md
specs/GAP-B2-live-20260620/: B2_LIVE_RESULT.md  run_b2.py  synthetic_exploration.json
specs/GAP-C2-live-20260620/: C2_LIVE_RESULT.md  run_c2.py  run_c2_outoftree.py  spec.json
specs/case1-recipe-favorite-20260619T114933Z/: EFFECTIVENESS_REPORT.md  input.md  spec.json  spec.md
specs/case2-shopping-archive-20260619T124100Z/: spec.json  spec.md
specs/case2-shopping-archive-live-new-20260620T120351Z/: RESULT.md  build_spec_v1.py  build_spec_v2.py  input.md
specs/case3-mealplan-bug-20260619T123941Z/: input.md  spec.json  spec.md
specs/case3-mealplan-bug-live-new-20260620T120351Z/: RESULT.md  build_spec_v1.py  build_spec_v2.py
specs/case4-recipe-n1-20260619T124200Z/: spec.json  spec.md
specs/case4-recipe-n1-live-new-20260620T120351Z/: RESULT.md  input.md  spec.md
specs/case5-live-iter1-20260619T175133Z/: FINDINGS.md  input.md  (+2 more)
tests/: conftest.py
(+342 files in other folders)
