[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devloop"
version = "0.1.0"
description = "DevLoop full-pipeline development agent — spec phase implementation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "DevLoop" }]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-language-pack>=0.7.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "structlog>=24.1.0",
    "typer>=0.12.0",
    "PyYAML>=6.0.1",
    "tiktoken>=0.7.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
devloop = "devloop.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["devloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
norecursedirs = ["tests/fixtures"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: end-to-end tests requiring real LLM calls",
    "integration: integration tests",
]

[tool.coverage.run]
source = ["devloop"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function call in default arg (typer.Option uses Path.cwd())
    "B007",   # unused loop variable (intentional in mock providers)
    "RUF012", # mutable class default (pydantic / tools class attrs are fine)
    "RUF001", # ambiguous unicode (CJK is intentional)
]

[tool.ruff.lint.per-file-ignores]
# Soft-language defense files intentionally embed Unicode confusables
# (Cyrillic / Greek / Math Bold / Fullwidth) in docstrings, comments, and
# test data to document and exercise the A4 + F1 homoglyph defense.
"devloop/spec_phase/schemas/spec.py" = ["RUF002", "RUF003"]
"devloop/spec_phase/_homoglyph_table.py" = ["RUF002", "RUF003"]
"tests/unit/schemas/test_soft_language_adversarial.py" = ["RUF002", "RUF003"]
"scripts/generate_homoglyph_table.py" = ["RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
